// Wirakorn Thanabat
// 6809617415

package one;

import one.Resource.Dimension;

public interface Selectable {
    Dimension choose(Dimension range);
}