%% Wirakorn Thanabat
%% 6809617415

classDiagram
    class Resource {
        +MINIMAL_MODE : boolean$
        +MINIMUM_LANDMINE : int$
        +INITIAL_HEALT_POINT : int$
        +HUMAN_PLAYER_AMOUNT : int$
        +COMPUTER_PLAYER_AMOUNT : int$
        +BLAST_DAMAGE : int $
        +BOARD_SIZE : Dimension$
        +rand : Random$
        +stdin : FastReader$
        +stdout : Printer$
    }
    class OBJECTS {
        <<enumeration>>
        NONE
        LANDMINE
        -description : String
        +isSafe() boolean
        +getChar() char
    }
    class TYPE {
        <<enumeration>>
        HUMAN
        COMPUTER
        OTHER
        -description : String
        +getType() String 
    }
    class Dimension {
        <<record>>
        +row : int
        +col : int
    }
    Resource ..> Dimension : nested
    Resource ..> TYPE : nested
    Resource ..> OBJECTS : nested
    Resource --> FastReader : instantiates
    Resource --> Printer : instantiates

    class FastReader {
        -BUF_SIZE : int
        -din : DataInputStream
        -buf : byte[]
        -bufPointer : int
        -bytesRead : int 
        FastReader(InputStream din)
        +nextInt() int 
        -read() byte
        -fillBuf() void
    }
    class Printer {
        -out : PrintWriter
        -BOLD : String
        -RESET : String
        Printer(OutputStream out)
        +println(String txt, boolean flush) void
        +printBoard(char[][] board) void
        +turnOf(String type) void
        +openingGrid(Dimension dimension) void
        +showHealthPointOf(String type, int amount) void
        +endGame(char[][] board) void
        +flush() void
        +bold(String txt) String
    }
    class Selectable {
        <<interface>>
        +choose() Dimension
    }
    class Player {
        <<abstract>>
        -healthPoint : int
        -alive : boolean
        -playerType : TYPE
        -deathCount : int$
        Player(TYPE playerType)
        +isAlive() boolean
        +getId()* int
        +reduceHealthPointBy(int damage) void
        +choose(Dimension range)* Dimension
    }
    Player ..> Resource : static import
    Player ..|> Selectable : implements
    class PlayerHuman {
        -id : int
        -totalId : int$
        +choose(Dimension range) Dimension
    }
    PlayerHuman --|> Player : extends
    class PlayerComputer {
        -openedPositions : HashSet<Dimension>$
        +choose(Dimension range) Dimension
    }
    PlayerComputer --|> Player : extends
    class Board {
        -board : List~List~OBJECTS~~
        -playerBoard : char[][]
        -dimension : Dimension
        -amountOfLandmines : int
        -openedLandmines : int
        Board(Dimension dimension, int amountOfLandmines)
        +setupBoard() void
        +choose(Dimension dimension) boolean$ ArrayIndexOutOfBoundsException
        +isReveal(Dimension dimension) boolean
        +isOutOfLandmines() boolean
        +revealAll() void

    }
    Board ..> Resource : static import
    class RuntimeException {
        <<Built-in>>
    }
    class InvalidBoardInitializeException {
        <<exception>>
        +InvalidBoardInitializeException(String message)
    }
    InvalidBoardInitializeException --|> RuntimeException
    class Operator {
        -ArrayList~Player~ players
        -Board world
        -Dimension boardSize
        +Operator()
        +setupGame() void
        +run() void
        -playersRound() void
        -processSinglePlayerTurn(Player p) void
        +endGame() void
    }
    Operator --o Player : manages
    Operator --* Board : owns
    Operator ..> Resource : static import
    Operator ..> InvalidBoardInitializeException : throws

    class TestGame {
        +main(String[] args)$ void
    }
    TestGame --> Operator : instantiates